# whatsNews

./: .gitignore  README.md  dev_watch.py  pyproject.toml  server.py
whatsnews/: main.py  scrapingNBA.py  sendMsg.py
