[tool.poetry]
name = "whatsnews"
version = "0.1.0"
description = ""
authors = ["All <allmacdev@gmail.com>"]
readme = "README.md"

[tool.taskipy.tasks]
dev = "uvicorn whatsnews.main:app --host 0.0.0.0 --port 8000 --reload "

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
